--- a/CSharpUnitTest/TestProject/TestProject.csproj
+++ b/CSharpUnitTest/TestProject/TestProject.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpUnitTest\CSharpUnitTest.csproj" />
+  </ItemGroup>
+
 </Project>
