--- a/CSharpUnitTest/CSharpUnitTest/CSharpUnitTest.csproj
+++ b/CSharpUnitTest/CSharpUnitTest/CSharpUnitTest.csproj
@@ -45,10 +45,12 @@
   <ItemGroup>
     <Compile Include="Add.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
